lots of language work

--- a/locale/nl/LC_MESSAGES/nanoquake.po
+++ b/locale/nl/LC_MESSAGES/nanoquake.po
@@ -6,72 +6,72 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-02-17 15:38+0000\n"
-"PO-Revision-Date: 2019-02-17 16:01+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2019-02-17 16:31+0000\n"
 "Language-Team: \n"
-"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 2.2.1\n"
+"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: nl\n"
 
 #: Test/yquake2/start.py:40
 msgid "Error - empty seed, please delete your seedAES.txt and start again"
-msgstr "Error – seed vacía, por favor borra tu seedAES.txt y comienza de nuevo"
+msgstr "Error - lege seed, verwijder het seedAES.txt en probeer het opnieuw"
 
 #: Test/yquake2/start.py:112
 msgid "Shutting down Quake"
-msgstr "Apagando Quake"
+msgstr "Quake aan het afsluiten"
 
 #: Test/yquake2/start.py:117
 msgid "Pay Nano to Server"
-msgstr "Pagar Nano al Servidor"
+msgstr "Betaal Nano aan Server"
 
 #: Test/yquake2/start.py:132 Test/yquake2/start.py:166
 msgid "Error - empty balance"
-msgstr "Error – Balance vacío"
+msgstr "Error - geen saldo"
 
 #: Test/yquake2/start.py:135 Test/yquake2/start.py:168
 msgid "Error - timeout checking balance"
-msgstr "Error – Se agotó el tiempo revisando el balance"
+msgstr "Error - time-out bij controleren saldo"
 
 #: Test/yquake2/start.py:144
 msgid "Payment Sent"
-msgstr "Pago enviado"
+msgstr "Betaling verzonden"
 
 #: Test/yquake2/start.py:147
 msgid "Error - insufficient funds"
-msgstr "Error - Fondos insuficientes"
+msgstr "Error - onvoldoende saldo"
 
 #: Test/yquake2/start.py:148
 msgid "Error insufficent funds"
-msgstr "Error fondos insuficientes"
+msgstr "Error onvoldoende saldo"
 
 #: Test/yquake2/start.py:151 Test/yquake2/start.py:152
 msgid "Last pay in less that 30 seconds ago"
-msgstr "Último pago hace menos de 30 segundos"
+msgstr "Laatste betaling was minder dan 30 seconden geleden"
 
 #: Test/yquake2/start.py:157
 msgid "Nano Balance"
-msgstr "Balance de Nano"
+msgstr "Nano Saldo"
 
 #: Test/yquake2/start.py:205
 msgid "Listening on %s:%d..."
-msgstr "Escuchando en %s:%d…"
+msgstr "Luisteren op %s:%d…"
 
 #: Test/yquake2/start.py:229
 msgid "Enter Your Password"
-msgstr "Ingrese su contraseña"
+msgstr "Voer wachtwoord in"
 
 #: Test/yquake2/start.py:235
 msgid "Enter New Password"
-msgstr "Ingrese su nueva contraseña"
+msgstr "Voer nieuw wachtwoord in"
 
 #: Test/yquake2/start.py:241
 msgid "Confirm"
-msgstr "Confirmar"
+msgstr "Bevestig"
 
 #: Test/yquake2/start.py:247 Test/yquake2/start.py:317
 #: Test/yquake2/start.py:382 Test/yquake2/start.py:407
@@ -80,31 +80,31 @@ msgstr "OK"
 
 #: Test/yquake2/start.py:311
 msgid "Destination Address"
-msgstr "Dirección de destino"
+msgstr "Bestemmingsadres"
 
 #: Test/yquake2/start.py:323
 msgid "Error - timeout, try again"
-msgstr "Error – Se agotó el tiempo, intente de nuevo"
+msgstr "Error - time-out, probeer het opnieuw"
 
 #: Test/yquake2/start.py:341
 msgid "Show Disclaimer"
-msgstr "Mostrar renuncia de responsabilidad"
+msgstr "Laat Disclaimer zien"
 
 #: Test/yquake2/start.py:343
 msgid "Show My Seed"
-msgstr "Mostrar mi Seed"
+msgstr "Toon mijn Seed"
 
 #: Test/yquake2/start.py:345
 msgid "Change My Language"
-msgstr "Cambiar mi idioma"
+msgstr "Verander mijn taal"
 
 #: Test/yquake2/start.py:347
 msgid "Back"
-msgstr "Regresar"
+msgstr "Terug"
 
 #: Test/yquake2/start.py:363
 msgid "Restarting with new settings"
-msgstr "Reiniciando con nuevas configuraciones"
+msgstr "Opnieuw opstarten met nieuwe instellingen"
 
 #: Test/yquake2/start.py:379
 msgid ""
@@ -118,123 +118,123 @@ msgstr ""
 
 #: Test/yquake2/start.py:399
 msgid "Generate New Seed"
-msgstr "Generar nueva seed"
+msgstr "Genereer Nieuwe Seed"
 
 #: Test/yquake2/start.py:402
 msgid "Import Seed"
-msgstr "Importar Seed"
+msgstr "Importeer Seed"
 
 #: Test/yquake2/start.py:413
 msgid "Wallet Seed (make a copy of this in a safe place!): {}"
-msgstr "Seed de la billetera (¡Copiela en un lugar seguro!): {}"
+msgstr "Wallet Seed (bewaar een kopie hiervan op een veilige plek!): {}"
 
 #: Test/yquake2/start.py:432
 msgid "Download Pak Files"
-msgstr "Descargar archivos PAK"
+msgstr "Download Pak Bestanden"
 
 #: Test/yquake2/start.py:434
 msgid "Yes"
-msgstr "Si"
+msgstr "Ja"
 
 #: Test/yquake2/start.py:436
 msgid "No"
-msgstr "No"
+msgstr "Nee"
 
 #: Test/yquake2/start.py:442
 msgid "Download Status"
-msgstr "Estado de descarga"
+msgstr "Download Status"
 
 #: Test/yquake2/start.py:462
 msgid "Downloading..."
-msgstr "Descargando…"
+msgstr "Aan het downloaden…"
 
 #: Test/yquake2/start.py:463
 msgid "Downloading Demo Pak..."
-msgstr "Descargando Pak demo…"
+msgstr "Demo Pak aan het downloaden…"
 
 #: Test/yquake2/start.py:469
 msgid "Failed to download demo files"
-msgstr "Descarga fallida de archivos demo"
+msgstr "Downloaden van demo bestanden mislukt"
 
 #: Test/yquake2/start.py:473
 msgid "Download Complete, now unzipping..."
-msgstr "Descarga completa, descomprimiendo…"
+msgstr "Download Voltooid, nu aan het uitpakken…"
 
 #: Test/yquake2/start.py:474
 msgid "Download Complete, now unzipping"
-msgstr "Descarga Completa, descomprimiendo"
+msgstr "Download Voltooid, nu aan het uitpakken"
 
 #: Test/yquake2/start.py:479 Test/yquake2/start.py:480
 msgid "Copying Files"
-msgstr "Copiando Archivos"
+msgstr "Bestanden aan het kopiëren"
 
 #: Test/yquake2/start.py:486
 msgid "Grabbing Curl Files"
-msgstr "Tomando Archivos Curl"
+msgstr "Curl bestanden aan het pakken"
 
 #: Test/yquake2/start.py:494
 msgid "Failed to download curl files"
-msgstr "Error al descargar archivos curl"
+msgstr "Downloaden van curl bestanden mislukt"
 
 #: Test/yquake2/start.py:535
 msgid "Quake already running"
-msgstr "Quake en marcha"
+msgstr "Quake is al actief"
 
 #: Test/yquake2/start.py:540
 msgid "Starting Quake2"
-msgstr "Iniciando Quake2"
+msgstr "Quake2 aan het opstarten"
 
 #: Test/yquake2/start.py:556
 msgid "Shutdown Socket Server and Exit"
-msgstr "Apagar Servidor Socket y Salir"
+msgstr "Stop Socket Server en Verlaten"
 
 #: Test/yquake2/start.py:562
 msgid "Checking for update"
-msgstr "Comprobación de actualización"
+msgstr "Controleren voor update"
 
 #: Test/yquake2/start.py:571
 msgid "Processing..."
-msgstr "Procesando…"
+msgstr "Aan het verwerken…"
 
 #: Test/yquake2/start.py:579
 msgid "Opening Account"
-msgstr "Abriendo cuenta"
+msgstr "Account aan het openen"
 
 #: Test/yquake2/start.py:581 Test/yquake2/start.py:589
 msgid "Reply {} {}"
-msgstr "Responder {} {}"
+msgstr "Beantwoord {} {}"
 
 #: Test/yquake2/start.py:594
 msgid "Error processing blocks"
-msgstr "Error procesando los bloques"
+msgstr "Error verwerken van blocks"
 
 #: Test/yquake2/start.py:601 Test/yquake2/start.py:785
 msgid "Timeout"
-msgstr "Se agotó el tiempo"
+msgstr "Time-out"
 
 #: Test/yquake2/start.py:603
 msgid "Account Not Open"
-msgstr "Cuenta no abierta"
+msgstr "Account Niet Open"
 
 #: Test/yquake2/start.py:719 Test/yquake2/start.py:735
 msgid "Public Key: "
-msgstr "Llave pública:"
+msgstr ""
 
 #: Test/yquake2/start.py:722 Test/yquake2/start.py:738
 msgid "Account Address: "
-msgstr "Dirección de la Cuenta:"
+msgstr ""
 
 #: Test/yquake2/start.py:729
 msgid "Seed file found"
-msgstr "Archivo seed encontrado"
+msgstr "Seed bestand gevonden"
 
 #: Test/yquake2/start.py:730
 msgid "Decoding wallet seed with your password"
-msgstr "Decodificando seed de la billetera con su contraseña"
+msgstr "Wallet seed aan het ontcijferen met uw wachtwoord"
 
 #: Test/yquake2/start.py:746
 msgid "This is your game account address: {}"
-msgstr "Esta es la dirección de tu cuenta en el juego.: {}"
+msgstr "Dit is het adres van uw spel account: {}"
 
 #: Test/yquake2/start.py:749
 msgid ""
@@ -242,60 +242,32 @@ msgid ""
 "Balance: {:.3} Nano\n"
 msgstr ""
 "\n"
-"Balance: {:.3} Nano\n"
+"Balans: {:.3} Nano\n"
 
 #: Test/yquake2/start.py:755
 msgid "NANO Rates"
-msgstr "Valoración NANO"
+msgstr "NANO Koersen"
 
 #: Test/yquake2/start.py:773
 msgid "Your Game Account: "
-msgstr "Su cuenta en el juego:"
+msgstr "Uw Spel Account:"
 
 #: Test/yquake2/start.py:780
 msgid "Your Balance: "
-msgstr "Su Balance:"
+msgstr "Uw balans:"
 
 #: Test/yquake2/start.py:792
 msgid "Start Game"
-msgstr "Iniciar Juego"
+msgstr "Start spel"
 
 #: Test/yquake2/start.py:795
 msgid "Withdraw All"
-msgstr "Retirar Todo"
+msgstr "Alle Nano terugtrekken"
 
 #: Test/yquake2/start.py:798
 msgid "Settings"
-msgstr "Configuraciones"
+msgstr "Instellingen"
 
 #: Test/yquake2/start.py:801
 msgid "Exit"
-msgstr "Salir"
-
-#~ msgid "Starting NanoQuake2..."
-#~ msgstr "Iniciando NanoQuake2…"
-
-#~ msgid "Current Dir: {}"
-#~ msgstr "Current Dir: {}"
-
-#~ msgid "System: {}"
-#~ msgstr "System: {}"
-
-#~ msgid "Work Dir: {}"
-#~ msgstr "Work Dir: {}"
-
-#~ msgid "Making a new config directory"
-#~ msgstr "Haciendo un nuevo directorio de configuración"
-
-#~ msgid "Error - system not recognised"
-#~ msgstr "Error – sistema no reconocido"
-
-#~ msgid "Config Directory: {}"
-#~ msgstr "Config Directory: {}"
-
-#~ msgid ""
-#~ "Old seed file detected, as encryption has been upgraded please import "
-#~ "your old seed, you can extract it with the decodeOldseed.py script"
-#~ msgstr ""
-#~ "Archivo seed antiguo detectado, el cifrado se ha actualizado, por favor "
-#~ "importe su antigua seed, se puede extraer con la decodeOldseed.py script"
+msgstr "Verlaten"
