--- a/locale/fr/LC_MESSAGES/nanoquake.po
+++ b/locale/fr/LC_MESSAGES/nanoquake.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-01-26 13:01+0000\n"
-"PO-Revision-Date: 2019-01-26 13:33+0000\n"
+"PO-Revision-Date: 2019-02-17 16:01+0000\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,11 +27,11 @@ msgstr "Arrêt de Quake"
 
 #: start.py:125
 msgid "Pay Nano to Server"
-msgstr ""
+msgstr "Payer nano au serveur"
 
 #: start.py:140 start.py:174
 msgid "Error - empty balance"
-msgstr ""
+msgstr "Erreur-solde vide"
 
 #: start.py:143 start.py:176
 msgid "Error - timeout checking balance"
