update french translation - thanks @Theo_P

--- a/locale/fr/LC_MESSAGES/nanoquake.po
+++ b/locale/fr/LC_MESSAGES/nanoquake.po
@@ -6,36 +6,37 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2019-01-26 13:01+0000\n"
-"PO-Revision-Date: 2019-02-17 16:01+0000\n"
+"PO-Revision-Date: 2019-02-17 21:55+0000\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 "X-Generator: Poedit 2.2.1\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Language: fr\n"
+"Last-Translator: \n"
+"Language: fr_FR\n"
 
 #: start.py:48
 msgid "Error - empty seed, please delete your seedAES.txt and start again"
 msgstr ""
+"Erreur - Seed manquante, supprimez le fichier seedAES.txt et redémarrez"
 
 #: start.py:120
 msgid "Shutting down Quake"
-msgstr "Arrêt de Quake"
+msgstr "Fermeture de Quake"
 
 #: start.py:125
 msgid "Pay Nano to Server"
-msgstr "Payer nano au serveur"
+msgstr "Envoyez des Nano au serveur"
 
 #: start.py:140 start.py:174
 msgid "Error - empty balance"
-msgstr "Erreur-solde vide"
+msgstr "Erreur - balance insuffisante"
 
 #: start.py:143 start.py:176
 msgid "Error - timeout checking balance"
-msgstr ""
+msgstr "Erreur - délais d’attente dépassé"
 
 #: start.py:152
 msgid "Payment Sent"
@@ -43,23 +44,23 @@ msgstr "Paiement envoyé"
 
 #: start.py:155
 msgid "Error - insufficient funds"
-msgstr "Erreur-insuffisance des fonds"
+msgstr "Erreur - fonds insuffisants"
 
 #: start.py:156
 msgid "Error insufficent funds"
-msgstr "Erreur des fonds insufficents"
+msgstr "Erreur fonds insuffisants"
 
 #: start.py:159 start.py:160
 msgid "Last pay in less that 30 seconds ago"
-msgstr ""
+msgstr "Dernier paiement il y a moins de 30 secondes"
 
 #: start.py:165
 msgid "Nano Balance"
-msgstr ""
+msgstr "Balance Nano"
 
 #: start.py:213
 msgid "Listening on %s:%d..."
-msgstr ""
+msgstr "Ecoute de %s:%d…"
 
 #: start.py:237
 msgid "Enter Your Password"
@@ -67,7 +68,7 @@ msgstr "Entrez votre mot de passe"
 
 #: start.py:243
 msgid "Enter New Password"
-msgstr "Entrez votre nouveau mot de passe"
+msgstr "Entrez un nouveau mot de passe"
 
 #: start.py:249
 msgid "Confirm"
@@ -79,27 +80,29 @@ msgstr "OK"
 
 #: start.py:284
 msgid "Destination Address"
-msgstr ""
+msgstr "Adresse de destination"
 
 #: start.py:296
 msgid "Error - timeout, try again"
-msgstr ""
+msgstr "Erreur - Délais d’attente dépassé, essayez à nouveau"
 
 #: start.py:313
 msgid "Generate New Seed"
-msgstr ""
+msgstr "Générer une nouvelle seed"
 
 #: start.py:316
 msgid "Import Seed"
-msgstr ""
+msgstr "Importer une seed"
 
 #: start.py:327
 msgid "Wallet Seed (make a copy of this in a safe place!): {}"
 msgstr ""
+"Seed de votre portefeuille (faites une copie de celle-ci dans un endroit "
+"sûr !): {}"
 
 #: start.py:346
 msgid "Download Pak Files"
-msgstr ""
+msgstr "Télécharger les fichiers Pak"
 
 #: start.py:348
 msgid "Yes"
@@ -111,133 +114,135 @@ msgstr "Non"
 
 #: start.py:353
 msgid "Download Status"
-msgstr ""
+msgstr "Etat du téléchargement"
 
 #: start.py:358
 msgid "Downloading..."
-msgstr ""
+msgstr "En cours de téléchargement…"
 
 #: start.py:359
 msgid "Downloading Demo Pak..."
-msgstr ""
+msgstr "Téléchargement du Demo Pak…"
 
 #: start.py:365
 msgid "Failed to download demo files"
-msgstr ""
+msgstr "Echec lors du téléchargement des fichiers de démo"
 
 #: start.py:369
 msgid "Download Complete, now unzipping..."
-msgstr ""
+msgstr "Téléchargement terminé, décompression en cours…"
 
 #: start.py:370
 msgid "Download Complete, now unzipping"
-msgstr ""
+msgstr "Téléchargement terminé, décompression en cours"
 
 #: start.py:375 start.py:376
 msgid "Copying Files"
-msgstr ""
+msgstr "Copie des fichiers"
 
 #: start.py:382
 msgid "Grabbing Curl Files"
-msgstr ""
+msgstr "Récupération des fichiers Curl"
 
 #: start.py:390
 msgid "Failed to download curl files"
-msgstr ""
+msgstr "Echec lors du téléchargement des fichiers Curl"
 
 #: start.py:431
 msgid "Quake already running"
-msgstr ""
+msgstr "Quake est déjà exécuté"
 
 #: start.py:436
 msgid "Starting Quake2"
-msgstr ""
+msgstr "Démarrage de Quake2"
 
 #: start.py:453
 msgid "Shutdown Socket Server and Exit"
-msgstr ""
+msgstr "Extinction des sockets serveur et fermeture"
 
 #: start.py:459
 msgid "Checking for update"
-msgstr ""
+msgstr "Recherche de mise à jour"
 
 #: start.py:468
 msgid "Processing..."
-msgstr ""
+msgstr "En cours…"
 
 #: start.py:476
 msgid "Opening Account"
-msgstr ""
+msgstr "Ouvrir un compte"
 
 #: start.py:478 start.py:486
 msgid "Reply {} {}"
-msgstr ""
+msgstr "Réponse {} {}"
 
 #: start.py:491
 msgid "Error processing blocks"
-msgstr ""
+msgstr "Erreur lors du traitement des blocks"
 
 #: start.py:498 start.py:643
 msgid "Timeout"
-msgstr ""
+msgstr "Délais d’attente dépassé"
 
 #: start.py:500
 msgid "Account Not Open"
-msgstr ""
+msgstr "Compte non ouvert"
 
 #: start.py:507
 msgid "Starting NanoQuake2..."
-msgstr ""
+msgstr "Démarrage de NanoQuake2…"
 
 #: start.py:509
 msgid "Current Dir: {}"
-msgstr ""
+msgstr "Dossier courant: {}"
 
 #: start.py:510
 msgid "System: {}"
-msgstr ""
+msgstr "Système: {}"
 
 #: start.py:519
 msgid "Work Dir: {}"
-msgstr ""
+msgstr "Dossier de travail: {}"
 
 #: start.py:525 start.py:532
 msgid "Making a new config directory"
-msgstr ""
+msgstr "Créer un nouveau dossier de configuration"
 
 #: start.py:537
 msgid "Error - system not recognised"
-msgstr ""
+msgstr "Erreur - système non reconnu"
 
 #: start.py:541
 msgid "Config Directory: {}"
-msgstr ""
+msgstr "Dossier de configuration: {}"
 
 #: start.py:545
 msgid ""
 "Old seed file detected, as encryption has been upgraded please import your "
 "old seed, you can extract it with the decodeOldseed.py script"
 msgstr ""
+"Ancienne seed détectée, l’encryptage ayant été mis à jour importez à "
+"nouveau votre seed , vous pouvez l’extraire avec le script decodeOldseed.py"
 
 #: start.py:577 start.py:593
 msgid "Public Key: "
-msgstr ""
+msgstr "Clé publique: "
 
 #: start.py:580 start.py:596
 msgid "Account Address: "
-msgstr ""
+msgstr "Adresse du compte: "
 
 #: start.py:587
 msgid "Seed file found"
-msgstr ""
+msgstr "Fichier seed trouvé"
 
 #: start.py:588
 msgid "Decoding wallet seed with your password"
-msgstr ""
+msgstr "Décoder la seed du portefeuille avec votre mot de passe"
 
 #: start.py:604
 msgid "This is your game account address: {}"
-msgstr ""
+msgstr "Ceci est l’adresse de votre compte de jeu: {}"
 
 #: start.py:607
 msgid ""
@@ -245,11 +250,11 @@ msgid ""
 "Balance: {:.3} Nano\n"
 msgstr ""
 "\n"
-"Solde: {:.3} Nano\n"
+"Balance: {:.3} Nano\n"
 
 #: start.py:613
 msgid "NANO Rates"
-msgstr ""
+msgstr "Taux de change NANO"
 
 #: start.py:631
 msgid "Your Game Account: "
@@ -257,16 +262,16 @@ msgstr "Votre compte de jeu: "
 
 #: start.py:638
 msgid "Your Balance: "
-msgstr "Votre solde: "
+msgstr "Votre balance: "
 
 #: start.py:650
 msgid "Start Game"
-msgstr "Démarrer jeu"
+msgstr "Commencer une partie"
 
 #: start.py:653
 msgid "Withdraw All"
-msgstr "Retirer tout"
+msgstr "Tout retirer"
 
 #: start.py:656
 msgid "Exit"
-msgstr "Sortie"
+msgstr "Fermer"
